# diom

./: .gitmodules  Cargo.toml  README.md
backends/cli/: Cargo.toml
backends/cli/src/: main.rs
backends/interpreter/: Cargo.toml
backends/interpreter-cli/: Cargo.toml
backends/interpreter-cli/src/: main.rs
backends/interpreter/src/: lib.rs
fmt/src/: lib.rs  updater.rs
fmt/src/blanket_impls/: spans.rs
fmt/src/formats/: code.rs  indented.rs  lines.rs  mod.rs  spans.rs
fmt/src/writers/: indent.rs  lines.rs  mod.rs  spans.rs
info/derive/src/: derive_map.rs  derive_ref.rs  derive_source.rs  lib.rs  utils.rs
info/traits/: Cargo.toml
info/traits/src/: boxes.rs  lib.rs  options.rs  tuples.rs  vecs.rs
lexing/: Cargo.toml
lexing/lexer/: Cargo.toml
lexing/lexer/proptest-regressions/tests/: proptests.txt
lexing/lexer/src/: chars.rs  comments.rs  errors.rs  helpers.rs  idents.rs  keywords.rs  lib.rs  operators.rs  parentheses.rs  structure.rs  tests.rs
lexing/lexer/src/tests/: mod.rs  proptests.rs
lexing/src/: chars.rs  comments.rs  idents.rs  lib.rs  tests.rs  token.rs  tokens.rs
lexing/src/lex/: chars.rs  comments.rs  helpers.rs  idents.rs  mod.rs  tests.rs  token.rs  tokens.rs
lexing/src/tokens/: mod.rs  span_token.rs  span_tokens.rs  token.rs
lexing/tokens/: Cargo.toml
lexing/tokens/src/: display.rs  lib.rs  span_token.rs  span_tokens.rs  token.rs
parse/: Cargo.toml
parse/src/: lib.rs
parse/src/common/: mod.rs  span.rs  traits.rs
parse/src/types/: mod.rs
parse/src/values/: mod.rs
parsing/: Cargo.toml
parsing/parser/: Cargo.toml
parsing/parser/proptest-regressions/tests/: proptests.txt
parsing/parser/src/: common.rs  errors.rs  ident.rs  idents.rs  lib.rs  parsers.rs  path.rs  utils.rs
parsing/parser/src/errors/: debug_error.rs  mod.rs
parsing/parser/src/expressions/: infix.rs  mod.rs
parsing/parser/src/expressions/compound/: arrays.rs  block.rs  function.rs  mod.rs  structs.rs
parsing/parser/src/expressions/control/: let_decl.rs  mod.rs  returns.rs
parsing/parser/src/expressions/infix/: assign.rs  method.rs  mod.rs
parsing/parser/src/expressions/literals/: chars.rs  floats.rs  mod.rs
parsing/parser/src/expressions/postfix/: assign.rs  call.rs  field.rs  index.rs  mod.rs  monads.rs
parsing/parser/src/expressions/prefix/: declare.rs  mod.rs  op.rs  returns.rs
parsing/parser/src/expressions/scopes/: let_decl.rs  mod.rs  returns.rs
parsing/parser/src/expressions/value/: block.rs  group.rs  mod.rs
parsing/parser/src/expressions/value/base/: chars.rs  floats.rs  mod.rs
parsing/parser/src/expressions/value/compound/: arrays.rs  functions.rs  mod.rs  structs.rs
parsing/parser/src/expressions/values/: mod.rs
parsing/parser/src/expressions/values/compound/: function.rs  group.rs
parsing/parser/src/expressions/values/literals/: mod.rs
parsing/parser/src/patterns/: arrays.rs  ignored.rs  mod.rs  rest.rs  structs.rs  tags.rs  tuples.rs
parsing/parser/src/tests/: mod.rs  proptests.rs  regressions.rs  snapshots.rs  utils.rs
parsing/parser/src/tests/snapshots/: diom_parser__tests__snapshots__floats-2.snap  diom_parser__tests__snapshots__floats-2.snap.new  diom_parser__tests__snapshots__floats-3.snap  diom_parser__tests__snapshots__floats-3.snap.new  diom_parser__tests__snapshots__floats-4.snap  diom_parser__tests__snapshots__floats-4.snap.new  diom_parser__tests__snapshots__floats-5.snap  diom_parser__tests__snapshots__floats-5.snap.new  diom_parser__tests__snapshots__floats.snap  diom_parser__tests__snapshots__floats.snap.new  diom_parser__tests__snapshots__functions.snap  diom_parser__tests__snapshots__functions.snap.new  snapshots__floats-3.snap  snapshots__floats-4.snap  snapshots__floats.snap
parsing/parser/src/types/: arrays.rs  enums.rs  functions.rs  mod.rs  structs.rs  tags.rs  tuples.rs  typedef.rs
parsing/parser/tests/: snapshots.rs
parsing/parser/tests/snapshots/: snapshots__floats-2.snap  snapshots__floats-5.snap  snapshots__functions.snap
parsing/src/: common.rs  errors.rs  ident.rs  lib.rs  parsers.rs  path.rs
parsing/src/common/: errors.rs  nodes.rs
parsing/src/expressions/: mod.rs
parsing/src/expressions/postfix/: assign.rs  call.rs  field.rs  index.rs  mod.rs  monads.rs
parsing/src/expressions/value/: let_decl.rs  returns.rs
parsing/src/expressions/value/compound/: arrays.rs  functions.rs  mod.rs  structs.rs
parsing/src/patterns/: rest.rs  structs.rs  tuples.rs
parsing/src/types/: arrays.rs  enums.rs  functions.rs  mod.rs  structs.rs  tuples.rs  typedef.rs
parsing/syntax/: Cargo.toml
parsing/syntax/src/: display.rs  ident.rs  idents.rs  lib.rs  path.rs  scope.rs  var.rs
parsing/syntax/src/expressions/: chars.rs  floats.rs  mod.rs
parsing/syntax/src/expressions/access/: call.rs  field.rs  index.rs  infix.rs  mod.rs  monads.rs  prefix.rs
parsing/syntax/src/expressions/blocks/: assign.rs  block.rs  declare.rs  group.rs  mod.rs  returns.rs
parsing/syntax/src/expressions/compound/: arrays.rs  functions.rs  mod.rs  structs.rs
parsing/syntax/src/fmt/: mod.rs  str_utils.rs  writer.rs
parsing/syntax/src/fmt/blanket_impls/: mod.rs  spans.rs
parsing/syntax/src/fmt/writers/: lines.rs  mod.rs
parsing/syntax/src/patterns/: arrays.rs  ignored.rs  mod.rs  rest.rs  structs.rs  tags.rs  tuples.rs
parsing/syntax/src/types/: arrays.rs  chars.rs  enums.rs  floats.rs  functions.rs  mod.rs  structs.rs  tags.rs  tuples.rs  typedef.rs
syntax/: Cargo.toml
syntax-macros/: Cargo.toml
syntax-macros/src/: derive_enum.rs  derive_struct.rs  lib.rs
syntax/src/: ident.rs  lib.rs  module.rs  path.rs  traits.rs
syntax/src/expressions/: chars.rs  floats.rs  functions.rs  mod.rs
syntax/src/patterns/: arrays.rs  enums.rs  ignored.rs  mod.rs  rest.rs  structs.rs  tuples.rs
syntax/src/types/: arrays.rs  chars.rs  enums.rs  floats.rs  functions.rs  mod.rs  structs.rs  tuples.rs  typedef.rs
syntax/src/values/: mod.rs  (+4 more)
tokens/: Cargo.toml
tokens/src/: span_token.rs  span_tokens.rs  token.rs
typing/: Cargo.toml
utils/fmt/: Cargo.toml
utils/nom-yuck/: Cargo.toml  README.md
(+38 files in other folders)
