[workspace]
members = [
  "info/derive",
  "info/traits",
  "lexing/lexer",
  "lexing/tokens",
  "parsing/parser",
  "parsing/syntax",
  "backends/interpreter",
  "backends/cli",
  "typing",
  "fmt",
]
resolver = "2"

[workspace.package]
rust-version = "1.78.0"
version = "0.1.0"
edition = "2021"
description = "The Diom Programming language"
authors = ["Alex Colby"]

keywords = ["compiler", "lazy", "function"]
categories = ["compilers", "parser-implementations"]

homepage = "https://github.com/Just-Helpful/diom"
repository = "https://github.com/Just-Helpful/diom"
documentation = "https://github.com/Just-Helpful/diom-docs"

license = "MIT"
readme = "README.md"
