[workspace]
members = [
  "backends/interpreter",
  "backends/cli",
  "lexing/lexer",
  "lexing/tokens",
  "parsing/parser",
  "parsing/syntax",
  "typing",
  "utils/info/derive",
  "utils/info/traits",
  "utils/fmt",
]
resolver = "2"

[workspace.package]
rust-version = "1.78.0"
version = "0.1.0"
edition = "2021"
description = "The Diom Programming language"
authors = ["Alex Colby"]

keywords = ["compiler", "lazy", "function"]
categories = ["compilers", "parser-implementations"]

homepage = "https://github.com/Just-Helpful/diom"
repository = "https://github.com/Just-Helpful/diom"
documentation = "https://github.com/Just-Helpful/diom-docs"

license = "MIT"
readme = "README.md"

[profile.dev.package]
# testing profiles
insta.opt-level = 3
