[package]
name = "diom-lexing"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true

homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
derivative = "2.2.0"
nom = "7.1.3"
nom_locate = "4.2.0"
visibility = "0.1.0"
