[package]
name = "diom-parse"
version = "0.1.0"
description = "Parses the Diom language to produce an AST"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.51.3"
diom-lexing = { version = "0.1.0", path = "../lexing" }
diom-syntax = { version = "0.1.0", path = "../syntax" }
nom = "7.1.3"
nom_locate = "4.2.0"
