[package]
name = "diom-interpreter"

rust-version.workspace = true
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

homepage.workspace = true
repository.workspace = true
documentation.workspace = true

readme.workspace = true
license.workspace = true

[dependencies]
diom-syntax = { version = "0.1.0", path = "../../parsing/syntax" }

[dev-dependencies]
diom-lexer = { path = "../../lexing/lexer" }
diom-parser = { path = "../../parsing/parser" }
diom-tokens = { path = "../../lexing/tokens" }
nom = "8.0.0"
