[package]
name = "diom-lexer"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true

homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
derivative = "2.2.0"
nom = "8.0.0"
diom-tokens = { version = "0.1.0", path = "../tokens" }
