[package]
name = "diom-lexer"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true

homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
diom-tokens = { version = "0.1.0", path = "../tokens" }
nom = "8.0.0"
