[package]
name = "diom-tokens"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true

homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
colorz = { version = "1.1.4", optional = true }
nom = "8.0.0"

[features]
default = ["pretty"]
pretty = ["dep:colorz"]
