[package]
name = "diom-parser"
version = "0.1.0"
description = "Parses the Diom language to produce an AST"
edition = "2021"

[dependencies]
diom-info-traits = { version = "0.1.0", path = "../../utils/info/traits" }
diom-tokens = { version = "0.1.0", path = "../../lexing/tokens" }
diom-syntax = { version = "0.1.0", path = "../syntax" }
diom-lexer = { path = "../../lexing/lexer" }
nom = "8.0.0"
nom-language = "0.1.0"
nom-yuck = { version = "0.1.0", path = "../../utils/nom-yuck" }

[dev-dependencies]
diom-lexer = { path = "../../lexing/lexer" }
insta = "1.46.3"
proptest = "1.10.0"
