[package]
name = "diom-syntax"
version = "0.1.0"
description = "Provides the syntax tree for the Diom language"
edition = "2021"

[dependencies]
diom-info-traits = { version = "0.1.0", path = "../../info/traits" }
diom-info-derive = { version = "0.1.0", path = "../../info/derive" }
diom-fmt = { version = "0.1.0", path = "../../fmt" }
