[package]
name = "diom-syntax"
version = "0.1.0"
description = "Provides the syntax tree for the Diom language"
edition = "2021"

[dependencies]
diom-info-traits = { version = "0.1.0", path = "../../utils/info/traits" }
diom-info-derive = { version = "0.1.0", path = "../../utils/info/derive" }
diom-fmt = { version = "0.1.0", path = "../../utils/fmt" }
diom-tokens = { version = "0.1.0", path = "../../lexing/tokens" }
proptest = "1.10.0"
